# djangotemplate

./: Containerfile  README.md  podman-compose.yml  pyproject.toml
app1/: admin.py  views.py
djangotemplate/: asgi.py  settings.py  urls.py  wsgi.py
